# minishell-cso

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Command.h  Executor.h  IntHashTable.h  Job.h  Lexer.h  LinkedList.h  Minishell.h  Parser.h  Pipeline.h  Process.h  Token.h  builtin.h  common.h  env.h  main.h  minishell.h  redirections.h  signals.h  utils.h
src/: main.c
src/basics/: IntHashTable.c  LinkedList.c
src/builtin/: bg.c  cd.c  dispatch.c  echo.c  env.c  exit.c  export.c  fg.c  jobs.c  pwd.c  selector.c  unset.c  utils.c
src/env/: env_utils.c  expander.c  utils.c
src/executor/: Executor.c  Job.c  utils.c
src/lexer/: Lexer.c  Token.c  test.c  utils.c
src/main/: completion.c  error.c  globals.c  main.c  prompt.c  signals.c  utils.c
src/parser/: Command.c  Parser.c  Pipeline.c  utils.c
src/redirection/: apply_red.c  heredoc.c  pipe.c  save_stdio.c
